<resources>

    <string name="app_name">LogiShift</string>

    <!-- Strings related to login -->
    <string name="action_sign_in_short">Check</string>
    <string name="action_change_url_schema">Change Scheme</string>
    <string name="server_label">Server</string>
    <string name="server_label_hint" >Server Url</string>

    <!-- Status bar menu string -->
    <string name="menu_item_text_logout" >Logout</string>
    <string name="menu_item_text_info" >Info</string>
    <string name="menu_item_change_server_url_text">Change server</string>

    <!-- Strings related to http login -->
    <string name="server_successfully_logged_out">You have been logged out successfully</string>
    <string name="server_sso_login_error">Error loading Single Sign On page</string>
    <string name="server_sso_login_successful">Loading Single Sign On page: success</string>

    <string name="no_app_available_to_open_document">No app available on this device can open document</string>
    <string name="action_save_url_schema">Save schema</string>
    <string name="server_schema_error">Server schema is not correct</string>
    <string name="save_schema_message">Save server schema before logging in</string>
    <string name="default_scheme">https</string>
    <string name="server_communication_error_title">SERVER COMMUNICATION ERROR</string>
    <string name="server_communication_error_message">Problem in rendering the page due a possible network problem. Try to restart the application</string>

    <string name="gpsSettingsAlertDialogTitle">Position settings</string>
    <string name="gpsSettingsAlertDialogMessage">Location not available. Open the position settings panel</string>
    <string name="gpsAlertDialogPositiveButtonText">Settings</string>
    <string name="gpsAlertDialogNegativeButtonText">Cancel</string>
    <string name="mainActivityPermissionGrantedText">Permission Granted</string>
    <string name="mainActivityPermissionDeniedText">Permission Denied</string>

</resources>
